--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
+    "@urql/devtools": "^0.1.2",
     "antd": "^3.26.4",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "typescript": "3.7.*",
+    "urql": "^1.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
