--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "antd": "^3.26.4",
+    "graphql": "^14.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "typescript": "^3.7.*",
+    "urql": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
